# remove-element

remove-element/: mkdocs.yml  pyproject.toml
remove-element/remove_element/: remove_element.py
